lot of help, fixes, report

--- a/kooplexhub/container/templates/storagehelp.html
+++ b/kooplexhub/container/templates/storagehelp.html
@@ -23,7 +23,7 @@ left: 0;
    <div class="modal-dialog modal-dialog-centered col-8">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalToggleLabel">Help: Attachments and Volumes</h5>
+          <h5 class="modal-title" id="exampleModalToggleLabel"><span class="bi bi-question-circle"></span>&nbsp;Help: Attachments and Volumes</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body row">
@@ -37,16 +37,15 @@ left: 0;
   <div>
     <div class="carousel-item active">
 	    <p>New attachment: Give it a name and add a description! It will appear under the <code>/v/attachments/&lt;foldername&gt;</code>, therefore it is restricted to alphanumerical characters only. </p>    
-      <img class="w-100" src="/static/paintstorage_hnew.png" alt="print home">
+      <img class="w-100" src="/static/paintstorage_hnew.png" alt="storage help">
     </div>
     <div class="carousel-item">
       <p>List attachment: List of all the existing attachments with their foldername and their description. Use the search bar on the top of the page to filter it. </p>
-      <img class="w-100" src="/static/printstorage_hattachmentlist.png" alt="print home">
+      <img class="w-100" src="/static/printstorage_hattachmentlist.png" alt="storage help">
               </div>
     <div class="carousel-item">
-      <p>List volumes: List of all the volumes you have access to. Use the search bar on the top of the page to filter it.
-      </p>
-    <img class="w-100" src="/static/printstorage_hvolumelist.png" alt="print home">
+      <p>List volumes: List of all the volumes you have access to. Use the search bar on the top of the page to filter it. </p>
+    <img class="w-100" src="/static/printstorage_hvolumelist.png" alt="storage help">
               </div>
   </div>
 </div>
