--- a/kooplexhub/education/templates/educationhelp.html
+++ b/kooplexhub/education/templates/educationhelp.html
@@ -24,7 +24,7 @@ left: 0;
    <div class="modal-dialog modal-dialog-centered col-8">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalToggleLabel">Help: Education</h5>
+          <h5 class="modal-title" id="exampleModalToggleLabel"><span class="bi bi-question-circle"></span>&nbsp;Help: Education</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body row">
@@ -50,64 +50,64 @@ left: 0;
   <div>
     <div class="carousel-item active">
       <p>Student course: List all of your attended courses. Use the search bar on the top of the page to filter.</p>    
-      <img class="w-100" src="/static/painteducation_hstudentcourselist.png" alt="print home">
+      <img class="w-100" src="/static/painteducation_istudentcourselist.png" alt="education help">
     </div>
     <div class="carousel-item">
       <p>Student assignments: List of all the assignments of your attended courses. Use this page to submit assignments or check your scores and the given feedbacks.</p>
-      <img class="w-100" src="/static/printeducation_studentassignment.png" alt="print home">
+      <img class="w-100" src="/static/printeducation_studentassignment.png" alt="education help">
     </div>
     <div class="carousel-item">
       <p>Course management:  List of all the courses where you are a teacher. Use the search bar on the top of the page to filter.</p>
-      <img class="w-100" src="/static/painteducation_hcourselist.png" alt="print home">
+      <img class="w-100" src="/static/painteducation_hcourselist.png" alt="education help">
               </div>
     <div class="carousel-item">
       <p>In the small dropdown menu with the buttons you can access all environments to which the course is bound to, stop or restart them.
        </p>
-      <img class="w-100" src="/static/painteducation_hoption.png" alt="print home">
+      <img class="w-100" src="/static/painteducation_hoption.png" alt="education help">
               </div>
     <div class="carousel-item">
       <p>On the bottom part of the dropdown panel use the configure button to update course details! </p>
-      <img class="w-100" src="/static/painteducation_hdropdown.png" alt="print home">
+      <img class="w-100" src="/static/painteducation_hdropdown.png" alt="education help">
               </div>
     <div class="carousel-item">
       <p>Course configuration: Update the name, description or the default image of the course </p>
-      <img class="w-100" src="/static/painteducation_configure.png" alt="print home">
+      <img class="w-100" src="/static/painteducation_configure.png" alt="education help">
     </div>
     <div class="carousel-item">
       <p>Course configuration - Teacher: Start typing the name or the username who you'd like to add as a teacher to the course. Click on their name and Save the changes </p>
-      <img class="w-100" src="/static/painteducation_teacher.png" alt="print home">
+      <img class="w-100" src="/static/painteducation_teacher.png" alt="education help">
     </div>
     <div class="carousel-item">
       <p>Course configuration - Student: Start typing the name or the username who you'd like to add as a student to the course. Click on their name and Save the changes </p>
-      <img class="w-100" src="/static/painteducation_student.png" alt="print home">
+      <img class="w-100" src="/static/painteducation_student.png" alt="education help">
     </div>
     <div class="carousel-item">
       <p> Course configuration - Groups: Organize students into groups. You can hand out different assignment to each group. </p>
-      <img class="w-100" src="/static/painteducation_groups.png" alt="print home">
+      <img class="w-100" src="/static/painteducation_groups.png" alt="education help">
     </div>
     <div class="carousel-item">
       <p>Course configuration - Group students: Once a group is created it can be populated with students.</p>
-      <img class="w-100" src="/static/painteducation_groupofstudents.png" alt="print home">
+      <img class="w-100" src="/static/painteducation_groupofstudents.png" alt="education help">
     </div>
     <div class="carousel-item">
       <p>Assignment management - New: Create new assignment. </p>
-      <img class="w-100" src="/static/painteducation_newassignment.png" alt="print home">
+      <img class="w-100" src="/static/painteducation_newassignment.png" alt="education help">
     </div>
     <div class="carousel-item">
       <p>Assignment management - Configure:  Update name, description, handout and collection time of the task and the size limit for each submission. Optionally the folder can be automatically deleted after submission (Erase button).  </p>
-      <img class="w-100" src="/static/painteducation_configassignment.png" alt="print home">
+      <img class="w-100" src="/static/painteducation_configassignment.png" alt="education help">
     </div>
     <div class="carousel-item">
       <p>Assignment management - Mass assignment: Manage handout, collection and correction of an assignment, or reassign it.  </p>
-      <img class="w-100" src="/static/painteducation_massassignment.png" alt="print home">
+      <img class="w-100" src="/static/painteducation_massassignment.png" alt="education help">
     </div>
     <div class="carousel-item">
       <p>Assignment management - Handle assignment: Select a course in the dropdown menu and handout, collect or correct (give score and feedback) for an assignment, or reassign it individually. Use filter by typing in the search bar on the top of this table.  </p>
-      <img class="w-100" src="/static/painteducation_handleassignment.png" alt="print home">
+      <img class="w-100" src="/static/painteducation_handleassignment.png" alt="education help">
     </div>
     <div class="carousel-item">
       <p>Assignment management - Student points: Results of the students for a given course.</p>
-      <img class="w-100" src="/static/painteducation_studentpoints.png" alt="print home">
+      <img class="w-100" src="/static/painteducation_studentpoints.png" alt="education help">
     </div>
   </div>
 </div>
