--- a/kooplexhub/hub/templates/homehelp.html
+++ b/kooplexhub/hub/templates/homehelp.html
@@ -16,9 +16,11 @@ left: 0;
 </style>
 
 
+
+
 <div class="modal fade modal-lg row" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
   <div  class="col-3">
-    <button class="left carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
@@ -26,7 +28,7 @@ left: 0;
    <div class="modal-dialog modal-dialog-centered col-8">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalToggleLabel">Help: Home page</h5>
+          <h5 class="modal-title" id="exampleModalToggleLabel"><span class="bi bi-question-circle"></span>&nbsp;Help: Home page</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body row">
@@ -44,50 +46,50 @@ left: 0;
   <div class="carousel-inner">
   <div>
     <div class="carousel-item active">
-		<p>This is the Kooplex home screen. Note on the bottom informs you about the status of the platform. In the top-right corner there is this Help, messages about your environment and reports and Profile, Logout, Documentation.</p> 
+		<p>This is the Kooplex home screen. Note on the bottom informs you about the status of the platform. In the top-right corner there is Help, Messages and Profile: Acess your profile, documentation and get to know more about our work at Kooplex.</p> 
 	 <div class="container-fluid myoverlaybase">
-          <img class="w-100" src="/static/printhome_hhome.png" alt="print home">
+          <img class="w-100" src="/static/printhome_hhome.png" alt="help home">
         </div>
     </div>
     <div class="carousel-item">
-		<p>Messages appear in the lower right corner informing you about the success or failure of your last operations </p> 
+		<p>Messages appear in the lower right corner informing you about the success or failure of your last operations. </p> 
 	 <div class="container-fluid myoverlaybase">
-          <img class="w-100" src="/static/printhome_hhome.png" alt="print home">
+          <img class="w-100" src="/static/printhome_hmessage.png" alt="help home">
         </div>
     </div>
     <div class="carousel-item">
          <p>Environment: Create a new Environment (virtual machine), configure/launch etc. your notebook and report Environments. </p>    
          <div class="container-fluid myoverlaybase">
-          <img class="w-100" src="/static/printhome_henvironment.png" alt="print home">
+          <img class="w-100" src="/static/printhome_ienvironment.png" alt="help home">
         </div>
     </div>
     <div class="carousel-item">
       <p>Project: Adds collaborative features to Environments.</p>
       <div class="container-fluid myoverlaybase">
-        <img class="w-100" src="/static/printhome_hproject.png" alt="print home">
+        <img class="w-100" src="/static/printhome_iproject.png" alt="help home">
       </div>
               </div>
     <div class="carousel-item">
       <p> Report: You can publish static or interactive Reports for a larger audience.</p>
       <div class="container-fluid myoverlaybase">
-        <img class="w-100" src="/static/printhome_hreport.png" alt="print home">
+        <img class="w-100" src="/static/printhome_ireport.png" alt="help home">
       </div>
               </div>
     <div class="carousel-item">
       <p>Education: Add course features to Environments and create/handle Assignments.</p>
       <div class="container-fluid myoverlaybase">
-        <img class="w-100" src="/static/printhome_heducation.png" alt="print home">
+        <img class="w-100" src="/static/printhome_ieducation.png" alt="help home">
       </div>
               </div>
     <div class="carousel-item">
       <p>Storage: Create or list Attachments and configure data Volumes.</p>
       {#<img class="w-100" src="/static/printhome_environment.png" alt="print home">#}
-      <img class="w-100" src="/static/printhome_hstorage.png" alt="print home">
+      <img class="w-100" src="/static/printhome_istorage.png" alt="help home">
     </div>
     <div class="carousel-item">
-      <p>Monitoring: Gives an overview about the computational resources</p>    
+      <p>Monitoring: Gives an overview about the computational resources. </p>    
       <div class="container-fluid myoverlaybase">
-        <img class="w-100" src="/static/printhome_hmonitoring.png" alt="print home">
+        <img class="w-100" src="/static/printhome_hmonitoring.png" alt="help home">
       </div>
     </div>
   </div>
