--- a/kooplexhub/project/templates/projecthelp.html
+++ b/kooplexhub/project/templates/projecthelp.html
@@ -24,7 +24,7 @@ left: 0;
    <div class="modal-dialog modal-dialog-centered col-8">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalToggleLabel">Help: Projects</h5>
+          <h5 class="modal-title" id="exampleModalToggleLabel"><span class="bi bi-question-circle"></span>&nbsp;Help: Projects</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body row">
@@ -45,55 +45,55 @@ left: 0;
     <div class="carousel-item active">
         <div class="container-fluid">
             <p>New project: Give a name, describe your project, add a folder name, select image or an environment, and define its scope.</p>
-            <img class="w-100" src="/static/printproject_new.png" alt="print home">
+            <img class="w-100" src="/static/printproject_new.png" alt="project help">
         </div> 
     </div>
     <div class="carousel-item">
         <div class="container-fluid">
             <p>List project: Use the search bar on the top of the page to filter them.<br><a class="btn btn-danger btn-sm" type="button" href="#"><i class="bi bi-boxes"></i></a> indicates that this project is not associated to any environment yet.</p> 
-            <img class="w-100" src="/static/printproject_hlist.png" alt="print home">
+            <img class="w-100" src="/static/printproject_ilist.png" alt="project help">
         </div>
     </div>
     <div class="carousel-item">
         <div class="container-fluid">
             <p>In the small dropdown menu with the buttons you can access all environments to which the project is bound to, stop or restart them. </p> 
-            <img class="w-100" src="/static/printproject_hoption.png" alt="print home">
+            <img class="w-100" src="/static/printproject_ioption.png" alt="project help">
         </div>
               </div>
     <div class="carousel-item">
         <div class="container-fluid">
             <p>At the bottom of the dropdown panel you can hide, configure or delete the Project. </p> 
-            <img class="w-100" src="/static/printproject_hdropdown.png" alt="print home">
+            <img class="w-100" src="/static/printproject_idropdown.png" alt="project help">
         </div>
               </div>
     <div class="carousel-item">
         <div class="container-fluid">
             <p>Configure Project - Meta: update project name, change its visibility among Kooplex users or update the description. </p>
-            <img class="w-100" src="/static/printproject_hmeta.png" alt="print home">
+            <img class="w-100" src="/static/printproject_imeta.png" alt="project help">
         </div>
     </div>
     <div class="carousel-item">
         <div class="container-fluid">
             <p>Configure Project - Collaboration: Start typing the name or username of the collaborators you'd like to add to the project. Optionally give them administrator role. Also you can choose a default environment for the collaborators.  </p>
-            <img class="w-100" src="/static/printproject_collaboration.png" alt="print home">
+            <img class="w-100" src="/static/printproject_icollaboration.png" alt="project help">
         </div> 
     </div>
     <div class="carousel-item">
         <div class="container-fluid">
             <p>Configure Project - Environment: Attach this project to your environments. </p>
-            <img class="w-100" src="/static/printproject_hcontainer.png" alt="print home">
+            <img class="w-100" src="/static/printproject_icontainer.png" alt="project help">
         </div> 
     </div>
     <div class="carousel-item">
         <div class="container-fluid">
             <p>Join project: In this page, you can join public projects. Use the switch to select the project you want to join and click on the Collaborate button. Toggle the image button if you would like to use the same environment for the chosen project. </p>
-            <img class="w-100" src="/static/printproject_hjoin.png" alt="print home">
+            <img class="w-100" src="/static/printproject_hjoin.png" alt="project help">
         </div> 
     </div>
     <div class="carousel-item">
         <div class="container-fluid">
             <p>Show/hide project: You have the option to hide or reveal the projects on the List Projects page. Use the toggle button to select the projects andd click the "Save al changes" button to finalize your choice.</p>
-            <img class="w-100" src="/static/printproject_hhideorshow.png" alt="print home">
+            <img class="w-100" src="/static/printproject_hhideorshow.png" alt="project help">
         </div> 
     </div>
   </div>
