--- a/kooplexhub/report/templates/reporthelp.html
+++ b/kooplexhub/report/templates/reporthelp.html
@@ -23,7 +23,7 @@ left: 0;
    <div class="modal-dialog modal-dialog-centered col-8">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalToggleLabel">Help: Reports</h5>
+          <h5 class="modal-title" id="exampleModalToggleLabel"><span class="bi bi-question-circle"></span>&nbsp;Help: Reports</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body row">
@@ -39,19 +39,19 @@ left: 0;
     <div class="carousel-item active">
       <p>Welcome to Report. In this section, we have two navigation options. Let's explore them over!</p> 
       <div class="container-fluid">
-        <img class="w-100" src="/static/report_home.png" alt="print home">
+        <img class="w-100" src="/static/report_home.png" alt="report help">
       </div>
     </div>
     <div class="carousel-item">
       <p>List of reports: In this page, the reports are disposed of by card format. To search for a specific report, use the search bar on the top of the page.</p>    
       <div class="container-fluid">
-        <img class="w-100" src="/static/printreport_hlist.png" alt="print home">
+        <img class="w-100" src="/static/printreport_hlist.png" alt="report help">
       </div>
     </div>
     <div class="carousel-item">
       <p>On the top of the card, right next to the name, you can click the green button to open report. On the bottom, we can press the tool button to configure the report and the trash bin button to delete it. </p>
       <div class="container-fluid">
-        <img class="w-100" src="/static/printreport_hdropdown.png" alt="print home">
+        <img class="w-100" src="/static/printreport_hdropdown.png" alt="report help">
       </div>
               </div>
     <div class="carousel-item">
@@ -66,7 +66,7 @@ left: 0;
         Index: name some index
         </p>
         <div class="container-fluid">
-          <img class="w-100" src="/static/printreport_hnew.png" alt="print home">
+          <img class="w-100" src="/static/printreport_hnew.png" alt="report help">
         </div>
               </div>
   </div>
