--- a/kooplexhub/container/templates/containerhelp.html
+++ b/kooplexhub/container/templates/containerhelp.html
@@ -24,7 +24,7 @@ left: 0;
    <div class="modal-dialog modal-dialog-centered col-8">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalToggleLabel">Help: Environments</h5>
+          <h5 class="modal-title" id="exampleModalToggleLabel"><span class="bi bi-question-circle"></span>&nbsp;Help: Environments</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body row">
@@ -46,62 +46,61 @@ left: 0;
     <div class="carousel-item active">
         <div class="container-fluid">
             <p>New environment: Add a human readable friendly name and choose an image for the environment. Use the dropdown in the bottom to see image descriptions!</p>
-            <img class="w-100" src="/static/printenv_hnew.png" alt="print home">
+            <img class="w-100" src="/static/printenv_hnew.png" alt="environment help">
         </div> 
     </div>
     <div class="carousel-item">
         <div class="container-fluid">
-            <p>List environment: This section shows us the list of all our containers. Use the search bar on the top to fil ter the list.</p> 
-            <img class="w-100" src="/static/printenv_hlist.png" alt="print home">
+            <p>List environment: This section shows us the list of all our containers. Use the search bar on the top to filter the list.</p> 
+            <img class="w-100" src="/static/printenv_hlist.png" alt="environment help">
         </div>
     </div>
     <div class="carousel-item">
         <div class="container-fluid">
-            <p>Click on the green down pointing arrow to open the dropdown panel for an environment. Small icons show the attached or mounted projects and attachments/volumes, below that 
-                warnings and container status messages.  </p> 
-            <img class="w-100" src="/static/printenv_hoption.png" alt="print home">
+            <p>Click on the green down pointing arrow to open the dropdown panel for an environment. Small icons show the attached or mounted projects and attachments/volumes, below that warnings and container status messages.  </p> 
+            <img class="w-100" src="/static/printenv_hoption.png" alt="environment help">
         </div>
               </div>
     <div class="carousel-item">
         <div class="container-fluid">
             <p>The buttons on the bottom are the following: Launch or access an environment, restatrt, stop the environment, refresh status message and configure environment. Bottom right button is for deleting the environment.</p> 
-            <img class="w-100" src="/static/printenv_hdropdown.png" alt="print home">
+            <img class="w-100" src="/static/printenv_hdropdown.png" alt="environment help">
         </div>
               </div>
     <div class="carousel-item">
         <div class="container-fluid">
             <p>Configure environment - Name/Image: update the friendly name or the image of the container.</p>
-            <img class="w-100" src="/static/printenv_hmeta.png" alt="print home">
+            <img class="w-100" src="/static/printenv_hmeta.png" alt="environment help">
         </div>
     </div>
     <div class="carousel-item">
         <div class="container-fluid">
-		<p>Configure environment - Projects: add projects to an environment. They will appear under the folder <code>/v/projects/</code></p>
-            <img class="w-100" src="/static/printenv_hproject.png" alt="print home">
+		<p>Configure environment - Projects: add projects to an environment. They will appear under the folder <code>/v/projects/</code>. </p>
+            <img class="w-100" src="/static/printenv_aproject.png" alt="environment help">
         </div> 
     </div>
     <div class="carousel-item">
         <div class="container-fluid">
-            <p>Configure environment - Courses: add courses and manage course material in an environment, access student working directories and submitted notebooks. They will appear under the folder <code>/v/course/</code></p>
-            <img class="w-100" src="/static/printenv_course.png" alt="print home">
+            <p>Configure environment - Courses: add courses and manage course material in an environment, access student working directories and submitted notebooks. They will appear under the folder <code>/v/course/</code>. </p>
+            <img class="w-100" src="/static/printenv_acourse.png" alt="environment help">
         </div> 
     </div>
     <div class="carousel-item">
         <div class="container-fluid">
-            <p>Configure environment - Attachments: mount any attachments into an environment. They will appear under the folder <code>/v/attachments/</code></p>
-            <img class="w-100" src="/static/printenv_hattachment.png" alt="print home">
+            <p>Configure environment - Attachments: mount any attachments into an environment. They will appear under the folder <code>/v/attachments/</code> .</p>
+            <img class="w-100" src="/static/printenv_aattachment.png" alt="environment help">
         </div> 
     </div>
     <div class="carousel-item">
         <div class="container-fluid">
-            <p>Configure environment - Volumes: mount any volume into an environment. They will appear under the folder <code>/v/volumes/</code></p>
-            <img class="w-100" src="/static/printenv_hvolume.png" alt="print home">
+            <p>Configure environment - Volumes: mount any volume into an environment. They will appear under the folder <code>/v/volumes/</code> .</p>
+            <img class="w-100" src="/static/printenv_hvolume.png" alt="environment help">
         </div> 
     </div>
     <div class="carousel-item">
         <div class="container-fluid">
             <p>List report environment: Lists containers that run the necessary processes for reports. Use the search bar on the top of to filter the page.</p>
-            <img class="w-100" src="/static/printenv_hreport.png" alt="print home">
+            <img class="w-100" src="/static/printenv_hreport.png" alt="environment help">
         </div> 
     </div>
   </div>
