--- a/kooplexhub/project/templates/project_partial_list.html
+++ b/kooplexhub/project/templates/project_partial_list.html
@@ -39,11 +39,11 @@
       <div class="container-fluid">
         <div class="d-flex flex-row justify-content-between">
           <div class="d-flex flex-row justify-content-start">
-	    <div>{% button_project_hide project %}</div>
-	    <div class="ms-2">{% button_project_conf project enabled=is_admin %}</div>
+	    <div>{% button_project_conf project enabled=is_admin %}</div>
           </div>
           <div class="d-flex flex-row justify-content-end">
-	    <div>{% button_project_delete project %}</div>
+	    <div>{% button_project_hide project %}</div>
+	    <div class="ms-2">{% button_project_delete project %}</div>
           </div>
         </div>
       </div>
