--- a/kooplexhub/report/templates/report_layout.html
+++ b/kooplexhub/report/templates/report_layout.html
@@ -5,18 +5,28 @@
 
 {% block page_title %}Kooplex Report{% endblock %}
 
+{% if not user.is_authenticated %}
+    {% block menu %}
+    {% endblock %}
+    {% block toprightmenu %} <h3 style="color: white;margin-right: 200px;"> Kooplex reports </h3> {% endblock %}
+{% endif %}
+
 {% block help %} 
-  {% include 'reporthelp.html' %}
+        {% if not user.is_authenticated %}
+          {% include 'reporthelp.html' %}
+        {% endif %}
 {% endblock %}
 
 {% block submenu %}
 <ul class="navbar-nav flex-row flex-md-row">
-  <li class="ms-3 nav-item text-center">
-    <a data-toggle="tooltip" title="New report" data-placement="bottom" class="nav-link {% if submenu == 'new' %}active active border-2 border-bottom{% endif %}" href="{% url 'report:new' %}"><i class="bi bi-bag-plus"></i><span class="d-none d-sm-block">&nbsp;New</span></a>
-  </li>
-  <li class="ms-3 nav-item text-center">
-    <a data-toggle="tooltip" title="List report" data-placement="bottom" class="nav-link {% if submenu == 'list' %}active active border-2 border-bottom{% endif %}" href="{% url 'report:list' %}"><i class="bi bi-bag-dash"></i><span class="d-none d-sm-block">&nbsp;List report</span></a>
-  </li>
+	{% if user.is_authenticated %}
+        <li class="ms-3 nav-item text-center">
+          <a data-toggle="tooltip" title="New report" data-placement="bottom" class="nav-link {% if submenu == 'new' %}active active border-2 border-bottom{% endif %}" href="{% url 'report:new' %}"><i class="bi bi-bag-plus"></i><span class="d-none d-sm-block">&nbsp;New</span></a>
+        </li>
+        {% endif %}
+        <li class="ms-3 nav-item text-center">
+          <a data-toggle="tooltip" title="List report" data-placement="bottom" class="nav-link {% if submenu == 'list' %}active active border-2 border-bottom{% endif %}" href="{% url 'report:list' %}"><i class="bi bi-bag-dash"></i><span class="d-none d-sm-block">&nbsp;List report</span></a>
+        </li>
 </ul>
 {% endblock %}
 
@@ -28,6 +38,10 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
   </div>
 {% endblock %}
+{% if not user.is_authenticated %}
+    {% block messages %} {% endblock %}
+    {% block infomessages %} {% endblock %}
+{% endif %}
 </div>
 {% endblock %}
 
